# jornada-de-dados-bootcamp-python

./: .gitignore  README.md  pyproject.toml
lectures/: challenge1-kpi-bonus-salary.py  day2_exercises.ipynb
