[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Fefe Alves <monitore.falves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
